# Step-motor-adapter-for-RPi

./: .gitignore  .gitmodules  CMakeLists.txt  Config.jflash  Doxyfile  LICENSE  README.md
cmake/: toolchain.cmake  utils.cmake
doc/: CMakeLists.txt
drivers/: CMakeLists.txt  startup_stm32f103xb.s
drivers/drivers/templates/inc/: gpio.h  gpio_driver.hpp  mcal_reg.h  stm32f1xx.hpp
drivers/drivers/templates/include/templates/: io_map.hpp
jlink/: flash.jlink.template  j-flash_lite_config.jflash
libraries/: CMakeLists.txt  groups.h
libraries/FS-IR02/: CMakeLists.txt
libraries/FS-IR02/inc/FS-IR02/: FS-IR02.hpp  types.hpp
libraries/a4988/: CMakeLists.txt  driver.cpp
libraries/a4988/inc/A4988/: A4988.hpp  driver.hpp  types.hpp
libraries/base/: CMakeLists.txt  crc.cpp
libraries/base/inc/: digitalSensor_io.hpp  line_io.hpp  motorControl_io.hpp  utils.hpp
libraries/base/inc/base/: clock.hpp  io_map.hpp
libraries/board/hardware/: CMakeLists.txt  hardware.cpp
libraries/board/hardware/inc/hardware/: gpio.hpp  gpio_internal.hpp  hardware.hpp
libraries/drivers/: CMakeLists.txt
libraries/drivers/gpio/: CMakeLists.txt  driver.cpp  gpio.cpp
libraries/drivers/gpio/inc/gpio/: driver.hpp  forward.hpp  gpio.hpp
libraries/drivers/i2c/: CMakeLists.txt
libraries/drivers/timer/: CMakeLists.txt
libraries/drivers/timer/inc/timer/: configuration.hpp  timer.hpp
libraries/drivers/uart/: CMakeLists.txt  driver.cpp  uart.cpp
libraries/drivers/uart/inc/uart/: driver.hpp  forward.hpp  uart.hpp
libraries/gpio/: CMakeLists.txt
libraries/gpio/inc/gpio/: driver.hpp  forward.hpp
libraries/motorController/: CMakeLists.txt  MotorController.cpp  command_factory.cpp  motor_controller.cpp
libraries/motorController/inc/MotorController/: MotorController.hpp  motor_controller.hpp
libraries/motorController/inc/motorController/: command_factory.hpp  forward.hpp  types.hpp
libraries/terminal/: CMakeLists.txt  driver.cpp  terminal.cpp
libraries/terminal/inc/terminal/: command_factory.hpp  driver.hpp  forward.hpp  terminal.hpp  types.hpp
libraries/uart/: CMakeLists.txt
libraries/uart/inc/uart/: driver.hpp
sourcetrail/: Adapter_Board.srctrlbm  Adapter_Board.srctrlprj
src/: CMakeLists.txt  TargetsDefines.hpp  board_access.cpp  board_access.hpp  main.c  main.cpp  stm32f1xx_hal_conf.h  stm32f1xx_hal_timebase_tim.c
src/mcu/: board.cpp  hardware.cpp
src/mcu/inc/mcu/: board.hpp  stm32f1xx_it.h
src/mcu/include/: io_map.hpp
src/mcu/include/mcu/: board.hpp  gpio-internal.hpp  gpio.hpp  hardware.hpp  io_map.hpp
src/payload/include/: blink.hpp
unit_tests/: CMakeLists.txt
